# ethzasl_sensor_fusion

./: README.md  stack.xml
ethzasl_sensor_fusion/: CMakeLists.txt  package.xml
sensor_fusion_comm/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ssf_core/: CMakeLists.txt  manifest.xml  package.xml
ssf_core/cfg/: SSF_CORE.cfg  parameters.cfg
ssf_core/include/ssf_core/: SSF_Core.h  eigen_conversions.h  eigen_utils.h  measurement.h  state.h
ssf_core/scripts/: plot_accbias  plot_attitude  plot_calib  plot_gyrbias  plot_position  plot_qvw  plot_relevant  plot_scale  plot_velocity
ssf_core/src/: SSF_Core.cpp  calcQ.h  measurement.cpp  state.cpp
ssf_updates/: CMakeLists.txt  bodyvel_sensor_fix.yaml  bodyvel_sensor_nodelet.xml  manifest.xml  package.xml  pose_sensor_fix.yaml  position_sensor_fix.yaml
ssf_updates/launch/: bodyvel_nodelet.launch  bodyvel_sensor.launch  pose_sensor.launch  position_sensor.launch
ssf_updates/src/: bodyvel_measurements.h  bodyvel_sensor.cpp  bodyvel_sensor.h  main.cpp  main_nodelet.cpp  pose_measurements.h  pose_sensor.cpp  pose_sensor.h  position_measurements.h  position_sensor.cpp  position_sensor.h
