<package>
  <name>ethzasl_sensor_fusion</name>
  <version>0.1.0</version>
  <description>Time delay compensated single and multi sensor fusion framework based on an EKF</description>
  <maintainer email="none@none.com">Maintained by Stephan Weiss</maintainer>
  <maintainer email="none@none.com">Markus Achtelik</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ethzasl_sensor_fusion</url>
  <url type="bugtracker">http://github.com/ethz-asl/ethzasl_sensor_fusion/issues</url>

  <author>Maintained by Stephan Weiss</author>
  <author>Markus Achtelik</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ssf_updates</run_depend>
  <run_depend>ssf_core</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
